feat: added endpoints for CG and Bookings
- added endpoint to get the list of bookings by PB
- simplified the endpoint for get list of CG for a PB
